Fix small screen problems
Link menu was disappearing before a selection could be made, so that was fixed.

Text in small screen was too narrow so adjusted to make it easier to read.

--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -60,6 +60,10 @@ a {
     color: white;
 }
 
+.navbar-collapse.in {
+    display: block !important;
+}
+
 /*
     SETTINGS FOR TEXT OVERLAYING JUMBOTRON
 */
